# elin-kitsune-pcc

./: .gitignore  README.md  build_and_deploy.py  install_templates.py  package.xml  pyproject.toml  tasks.py
.github/workflows/: build.yml  release.yml
lib/: config.py  console.py  project.py
site/: fluffy-fluffy.psd  showcase.ase
src/: package.xml
src/Actor/PCC/female/: pcc_body_1-no-ear.ase  pcc_body_2-no-ear.ase  pcc_face_kitsune-1.ase  pcc_face_kitsune-1a.ase  pcc_face_kitsune-1b.ase  pcc_face_kitsune-1c.ase  pcc_face_kitsune-1d.ase  pcc_face_kitsune-1e.ase  pcc_mantle_kitsune-1-1a.ase  pcc_mantle_kitsune-1-1b.ase  pcc_mantle_kitsune-1-1c.ase  pcc_mantle_kitsune-1-1d.ase  pcc_mantle_kitsune-1-1e.ase  pcc_mantle_kitsune-1-3a.ase  pcc_mantle_kitsune-1-3b.ase  pcc_mantle_kitsune-1-3c.ase  pcc_mantle_kitsune-1-3d.ase  pcc_mantle_kitsune-1-3e.ase  pcc_mantle_kitsune-1-5a.ase  pcc_mantle_kitsune-1-5b.ase  pcc_mantle_kitsune-1-5c.ase  pcc_mantle_kitsune-1-5d.ase  pcc_mantle_kitsune-1-5e.ase  pcc_mantle_kitsune-1-9a.ase  pcc_mantle_kitsune-1-9b.ase  pcc_mantle_kitsune-1-9c.ase  pcc_mantle_kitsune-1-9d.ase  (+9 more)
src/Template/: install.bat  kitsune_f_1-1a.json  kitsune_f_1-1b.json  kitsune_f_1-1c.json  kitsune_f_1-1d.json  kitsune_f_1-1e.json  kitsune_f_1-3a.json  kitsune_f_1-3b.json  kitsune_f_1-3c.json  kitsune_f_1-3d.json  kitsune_f_1-3e.json  kitsune_f_1-5a.json  kitsune_f_1-5b.json  kitsune_f_1-5c.json  kitsune_f_1-5d.json  kitsune_f_1-5e.json  kitsune_f_1-9a.json  kitsune_f_1-9b.json  kitsune_f_1-9c.json  kitsune_f_1-9d.json  kitsune_f_1-9e.json  kitsune_f_1.json
