[project]
name = "n15g-kitsune-pcc"
version = "0.0.1"
description = """Adds new Kitsune-themed PCC options to the game, including multiple kyuubi-like tails."""
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "invoke (>=2.2.0,<3.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "chevron (>=0.14.0,<0.15.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.elin]
package-name = "N15g_Kitsune_PCC"
title = "N15g Kitsune PCC"
author = "N15g"
tags = "PCC"
